# libadt

./: .hgignore  AUTHORS  Makefile.am  configure.ac
.hg/: dirstate  hgrc  undo.desc
.hg/cache/: branch2-base
.hg/store/: 00changelog.i  00manifest.i  fncache  undo
.hg/store/data/: _a_u_t_h_o_r_s.i  _c_o_p_y_i_n_g.i  _i_n_s_t_a_l_l.i  _l_i_c_e_n_s_e.i  _makefile.am.i  _makefile.i  _makefile.in.i  _r_e_a_d_m_e.i  aclocal.m4.i  ar-lib.i  compile.i  config.h.i  config.h.in.i  config.log.i  config.status.i  configure.ac.i  configure.i  depcomp.i  egc__make__all.i  egc__make__clean.i  libtest.c.i  linked__list.c.i  linked__list.h.i  missing.i  stack.c.i  stack.h.i  stamp-h1.i  test-driver.i  ~2ehgignore.i
.hg/store/data/autom4te.cache/: output.0.i  output.1.i  output.2.i  output.3.i  requests.i  (+5 more)
src/: Makefile.am  adt_array.c  adt_array.h  adt_array_type.h  adt_collection.c  adt_collection.h  adt_collection_type.h  adt_iterator.c  adt_iterator.h  adt_iterator_type.h  adt_list.c  adt_list.h  adt_list_type.h  adt_map.c  adt_map.h  adt_map_type.h  adt_object.c  adt_object.h  adt_object_type.h  adt_pair.c  adt_pair.h  adt_pair_type.h  adt_sequence.c  adt_sequence.h  adt_sequence_type.h
test/: Makefile.am  adt_array.0.test.t  adt_array.1.test.t  adt_array.2.test.t  adt_array.3.test.t  adt_collection.0.test.t  adt_list.0.test.t  adt_list.1.test.t  adt_list.2.test.t  adt_list.3.test.t  adt_map.0.test.t  adt_map.1.test.t  adt_map.2.test.t  adt_object.0.test.t  adt_object.1.test.t  adt_pair.0.test.t  adt_pair.1.test.t  adt_sequence.0.test.t  sut_test.c  sut_test.h  testgen.sh
(+127 files in other folders)
